--- a/practice.html
+++ b/practice.html
@@ -161,7 +161,15 @@
     <p>累計退店数: <span id="exits">-</span></p>
   </main>
   <script>
-    const firebaseConfig = { /* Firebase設定 */ };
+        const firebaseConfig = {
+      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+      authDomain: "qr-visitor-log.firebaseapp.com",
+      projectId: "qr-visitor-log",
+      storageBucket: "qr-visitor-log.appspot.com",
+      messagingSenderId: "304250341939",
+      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+    };
+
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
