--- a/practicemenu.html
+++ b/practicemenu.html
@@ -188,6 +188,9 @@
 
   <main>
 
+    <h2>店内マップ</h2>
+    <iframe src="map.html" width="850" height="650" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+
   </main>
 
 </body>
