--- a/practice.html
+++ b/practice.html
@@ -7,7 +7,6 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: 'Helvetica Neue', sans-serif;
@@ -17,30 +16,57 @@
       color: #2c3e50;
       overflow-x: hidden;
     }
+
     header {
       background-color: #2c3e50;
       color: white;
       position: relative;
+      margin-bottom: 0;
+      padding-bottom: 0; 
     }
+
     .header-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 12px 20px;
     }
+
     .header-title {
       font-size: 1.5em;
       font-weight: bold;
     }
+
     .header-links {
       display: flex;
       gap: 20px;
     }
+
     .header-links a {
       color: white;
       text-decoration: none;
       font-weight: 500;
     }
+
+    .header-links a:hover {
+      text-decoration: underline;
+    }
+
+    .full-width-section {
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+
+  background: #e0f7da;
+  padding: 60px 0;
+  text-align: center;
+  margin-top: 0 !important; 
+}
+
+    /* ハンバーガーメニュー */
     .menu-button {
       position: absolute;
       left: 20px;
@@ -50,12 +76,15 @@
       cursor: pointer;
       z-index: 1001;
     }
+
     .menu-button span {
       display: block;
       height: 4px;
       background: white;
       margin: 5px 0;
+      transition: 0.4s;
     }
+
     .drawer {
       position: fixed;
       top: 0;
@@ -68,9 +97,11 @@
       z-index: 1000;
       padding-top: 60px;
     }
+
     .drawer.open {
       left: 0;
     }
+
     .drawer a {
       display: block;
       padding: 15px 20px;
@@ -79,89 +110,29 @@
       font-weight: bold;
       border-bottom: 1px solid #2c3e50;
     }
+
+    .drawer a:hover {
+      background-color: #2c3e50;
+    }
+
     main {
-      max-width: 1200px;
+      max-width: 800px;
       margin: 0 auto;
       padding: 30px 20px;
     }
-    .card-container {
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-      margin-bottom: 30px;
+
+    h2 {
+      margin-top: 40px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #2c3e50;
+      padding-bottom: 5px;
     }
-    .card {
-      flex: 1;
-      background: white;
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
-    .highlight-box {
-      background: #e0ffe0;
-      border-left: 6px solid #4caf50;
-      padding: 15px;
-      margin-top: 15px;
-    }
-    .chart-wrapper {
-      position: relative;
-      width: 100%;
-      height: 400px;
-    }
-    canvas {
-      width: 100% !important;
-      height: 100% !important;
-    }
+
+
   </style>
-</head>
-<body>
-  <header>
-    <div class="menu-button">
-      <span></span><span></span><span></span>
-    </div>
-    <div class="header-bar">
-      <div class="header-title">　　　　　店内管理システム</div>
-      <div class="header-links">
-        <a href="#">マニュアル</a>
-        <a href="start.html">ログアウト</a>
-      </div>
-    </div>
-    <div class="drawer">
-      <a href="index.html">ホーム</a>
-      <a href="table.html">テーブル管理</a>
-      <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">順番待ち管理</a>
-      <a href="admin.html">QRコード一覧</a>
-      <a href="admin.html">アンケート管理</a>
-    </div>
-  </header>
-  <main>
-    <div class="card-container">
-      <div class="card">
-        <h3>入店者の推移</h3>
-        <select id="rangeSelect">
-          <option value="today">今日</option>
-          <option value="month">今月</option>
-        </select>
-        <div class="chart-wrapper"><canvas id="entryChart"></canvas></div>
-        <div class="chart-wrapper" style="margin-top: 15px;"><canvas id="barChart"></canvas></div>
-      </div>
-      <div class="card">
-        <h3>平均滞在時間</h3>
-        <div class="highlight-box">
-          <p>今日の平均: <span id="avgToday">--</span></p>
-          <p>曜日別平均: <span id="avgWeekday">--</span></p>
-          <p>総合平均: <span id="avgTotal">--</span></p>
-        </div>
-      </div>
-    </div>
-    <h2>全体状況</h2>
-    <p>現在の入店者数: <span id="count">読み込み中...</span></p>
-    <p>累計入店数: <span id="entries">-</span></p>
-    <p>累計退店数: <span id="exits">-</span></p>
-  </main>
+
   <script>
-        const firebaseConfig = {
+    const firebaseConfig = {
       apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
       authDomain: "qr-visitor-log.firebaseapp.com",
       projectId: "qr-visitor-log",
@@ -173,108 +144,54 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    const ctx = document.getElementById('entryChart').getContext('2d');
-    const ctxBar = document.getElementById('barChart').getContext('2d');
-    let entryChart;
-    let barChart;
+    function updateTableDisplays() {
+   }
 
-    function loadCharts() {
-      const now = new Date();
-      db.collection("logs").get().then(snapshot => {
-        const dayData = Array(24).fill(0);
-        const monthData = {};
-        const barData = {};
-        const stays = [];
-        const todayStays = [];
-        const weekdayStays = {};
-        const enterMap = new Map();
-
-        snapshot.forEach(doc => {
-          const data = doc.data();
-          const date = new Date(data.timestamp);
-          const hour = date.getHours();
-          const dateStr = date.toISOString().split("T")[0];
-          const key = `${data.table}_${data.device}`;
-
-          if (data.type === "enter") {
-            if (isToday(date)) dayData[hour]++;
-            const monthKey = `${date.getMonth() + 1}/${date.getDate()}`;
-            monthData[monthKey] = (monthData[monthKey] || 0) + 1;
-            barData[dateStr] = (barData[dateStr] || 0) + 1;
-            enterMap.set(key, date);
-          }
-
-          if (data.type === "exit" && enterMap.has(key)) {
-            const enterTime = enterMap.get(key);
-            const stay = (date - enterTime) / 60000;
-            stays.push(stay);
-            if (isToday(enterTime)) todayStays.push(stay);
-            const wd = enterTime.getDay();
-            if (!weekdayStays[wd]) weekdayStays[wd] = [];
-            weekdayStays[wd].push(stay);
-            enterMap.delete(key);
-          }
-        });
-
-        updateLineChart(dayData, monthData);
-        updateBarChart(barData);
-        updateAverages(todayStays, weekdayStays, stays);
-      });
+    function countVisitors(snapshot) {
+      updateTableDisplays();
     }
 
-    function isToday(date) {
-      const now = new Date();
-      return date.getFullYear() === now.getFullYear() && date.getMonth() === now.getMonth() && date.getDate() === now.getDate();
-    }
-
-    function average(arr) {
-      return arr.length ? (arr.reduce((a, b) => a + b, 0) / arr.length).toFixed(1) : '--';
-    }
-
-    function updateAverages(today, weekdayMap, total) {
-      document.getElementById("avgToday").textContent = average(today) + " 分";
-
-      const day = new Date().getDay();
-      document.getElementById("avgWeekday").textContent = average(weekdayMap[day] || []) + " 分";
-      document.getElementById("avgTotal").textContent = average(total) + " 分";
-    }
-
-    function updateLineChart(dayData, monthData) {
-      const selected = document.getElementById("rangeSelect").value;
-      const data = selected === "today" ? dayData : Object.values(monthData);
-      const labels = selected === "today" ? [...Array(24).keys()].map(h => `${h}時`) : Object.keys(monthData);
-
-      if (entryChart) entryChart.destroy();
-      entryChart = new Chart(ctx, {
-        type: 'line',
-        data: {
-          labels,
-          datasets: [{ label: "入店者数", data, borderColor: "#42a5f5", fill: false }]
-        },
-        options: { responsive: true, maintainAspectRatio: false }
-      });
-    }
-
-    function updateBarChart(barData) {
-      const sortedKeys = Object.keys(barData).sort();
-      const recentKeys = sortedKeys.slice(-7);
-      const values = recentKeys.map(k => barData[k]);
-
-      if (barChart) barChart.destroy();
-      barChart = new Chart(ctxBar, {
-        type: 'bar',
-        data: {
-          labels: recentKeys,
-          datasets: [{ label: "直近7日間の入店数", data: values, backgroundColor: "#66bb6a" }]
-        },
-        options: { responsive: true, maintainAspectRatio: false }
-      });
-    }
-
-    document.getElementById("rangeSelect").addEventListener("change", loadCharts);
     window.onload = () => {
-      loadCharts();
-    }
+      db.collection("logs").onSnapshot(countVisitors);
+      setInterval(updateTableDisplays, 60000);
+
+      const menuButton = document.querySelector(".menu-button");
+      const drawer = document.querySelector(".drawer");
+      menuButton.addEventListener("click", () => {
+        drawer.classList.toggle("open");
+      });
+    };
   </script>
+</head>
+<body>
+
+  <header>
+    <div class="menu-button">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <div class="header-bar">
+      <div class="header-title">　　　　　店内管理システム</div>
+      <div class="header-links">
+        <a href="#">マニュアル</a>
+        <a href="start.html">ログアウト</a>
+      </div>
+    </div>
+    <div class="drawer">
+      <a href="index.html">ホーム</a>
+      <a href="map.html">店内マップ</a>
+      <a href="histogram.html">混雑状況可視化</a>
+      <a href="admin.html">待ち管理</a>
+    </div>
+  </header>
+
+  <main>
+
+    <h2>店内マップ</h2>
+    <iframe src="welcome.png" width="850" height="650" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+
+  </main>
+
 </body>
 </html>
