--- a/practice.html
+++ b/practice.html
@@ -185,8 +185,8 @@
   <main>
 
 <h2>店内マップ</h2>
-<div style="display: flex; gap: 10px;">
-  <iframe src="welcome.png" width="250" height="250" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+<div style="display: flex; gap: 20px;">
+  <iframe src="enterQR.png" width="250" height="250" style="border: 2px solid #444; border-radius: 8px;"></iframe>
   <iframe src="welcome.png" width="250" height="250" style="border: 2px solid #444; border-radius: 8px;"></iframe>
   <iframe src="welcome.png" width="250" height="250" style="border: 2px solid #444; border-radius: 8px;"></iframe>
   <iframe src="welcome.png" width="250" height="250" style="border: 2px solid #444; border-radius: 8px;"></iframe>
