--- a/QR/practice2.html
+++ b/QR/practice2.html
@@ -192,6 +192,13 @@
   <iframe src="welcome.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
 </div>
 
+<div style="display: flex; gap: 80px;">
+  <iframe src="enterQR.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+  <iframe src="exitQR.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+  <iframe src="welcome.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+  <iframe src="welcome.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+</div>
+
   </main>
 
 </body>
