--- a/QR/practice2.html
+++ b/QR/practice2.html
@@ -184,7 +184,7 @@
 
   <main>
 
-<h2>店内マップ</h2>
+<h2>QRコード一覧</h2>
 <div style="display: flex; gap: 80px;">
   <iframe src="enterQR.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
   <iframe src="exitQR.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
@@ -222,6 +222,12 @@
   <iframe src="welcome.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
   <iframe src="welcome.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
 </div>
+
+
+    <h2>店内マップ</h2>
+    <iframe src="map.html" width="850" height="650" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+    <iframe src="welcome.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+
 
   </main>
 
