--- a/QR/practice2.html
+++ b/QR/practice2.html
@@ -226,7 +226,7 @@
 
     <h2>店内マップ</h2>
     <iframe src="map.html" width="850" height="650" style="border: 2px solid #444; border-radius: 8px;"></iframe>
-    <iframe src="welcome.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+    <iframe src="waitQR.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
 
 
   </main>
