--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
       <a href="table.html">テーブル管理</a>
       <a href="histogram.html">混雑状況可視化</a>
       <a href="admin.html">順番待ち管理</a>
-      <a href="admin.html">QRコード一覧</a>
+      <a href="practice2.html">QRコード一覧</a>
       <a href="admin.html">アンケート管理</a>
     </div>
   </header>
