--- a/QR/qrcode.html
+++ b/QR/qrcode.html
@@ -175,10 +175,12 @@
       </div>
     </div>
     <div class="drawer">
-      <a href="index.html">ホーム</a>
-      <a href="map.html">店内マップ</a>
-      <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">待ち管理</a>
+      <a href="https://qr-webpage.vercel.app/index.html">ホーム</a>
+      <a href="https://qr-webpage.vercel.app/map.html">店内マップ</a>
+      <a href="https://qr-webpage.vercel.app/histogram.html">混雑状況可視化</a>
+      <a href="https://qr-webpage.vercel.app/admin.html">待ち管理</a>
+      <a href="https://qr-webpage.vercel.app/QR/qrcode.html">QRコード一覧</a>
+
     </div>
   </header>
 
