--- a/QR/qrcode.html
+++ b/QR/qrcode.html
@@ -193,6 +193,11 @@
   <iframe src="welcome.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
   <iframe src="welcome.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
 </div>
+    <div style="display: flex; gap: 80px;">
+   <p>テーブル1</p>
+      </div>
+
+
 
  <br>
 <div style="display: flex; gap: 80px;">
