--- a/histogram.html
+++ b/histogram.html
@@ -199,7 +199,7 @@
       <a href="index.html">ホーム</a>
       <a href="table.html">テーブル管理</a>
       <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">待ち管理</a>
+      <a href="admin.html">順番待ち管理</a>
     </div>
   </header>
 
