--- a/QR/qrcode.html
+++ b/QR/qrcode.html
@@ -189,11 +189,13 @@
 <h2>QRコード一覧</h2>
 <div style="display: flex; gap: 80px;">
   <iframe src="enterQR.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
-  <p style="font-size: 24px; margin-top: 10px;">テーブル1</p>
   <iframe src="exitQR.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+  <iframe src="welcome.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+  <iframe src="welcome.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+</div>
+<div style="display: flex; gap: 150px;">
     <p style="font-size: 24px; margin-top: 10px;">テーブル1</p>
-  <iframe src="welcome.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
-  <iframe src="welcome.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+    <p style="font-size: 24px; margin-top: 10px;">テーブル1</p>
 </div>
 
 
