--- a/start.html
+++ b/start.html
@@ -108,7 +108,7 @@
 
   <div class="container">
     <section class="section">
-      <img src="map.png" alt="店内マップ" class="fade-up" />
+      <img src="picture.png" alt="タイトル" class="fade-up" />
       <div class="button-wrapper fade-up">
         <a href="index.html" class="btn-start">▶ 使ってみる</a>
       </div>
