--- a/table.html
+++ b/table.html
@@ -175,6 +175,8 @@
       <a href="table.html">テーブル管理</a>
       <a href="histogram.html">混雑状況可視化</a>
       <a href="admin.html">順番待ち管理</a>
+      <a href="/QR/qrcode.html">QRコード一覧</a>
+
     </div>
   </header>
 
