--- a/practice.html
+++ b/practice.html
@@ -115,7 +115,11 @@
       background-color: #2c3e50;
     }
 
-
+    main {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 30px 20px;
+    }
 
     h2 {
       margin-top: 40px;
@@ -184,15 +188,7 @@
 
   <main>
 
-<h2>店内マップ</h2>
-<div style="display: flex; gap: 20px;">
-  <iframe src="enterQR.png" width="250" height="250" style="border: 2px solid #444; border-radius: 8px;"></iframe>
-  <iframe src="welcome.png" width="250" height="250" style="border: 2px solid #444; border-radius: 8px;"></iframe>
-  <iframe src="welcome.png" width="250" height="250" style="border: 2px solid #444; border-radius: 8px;"></iframe>
-  <iframe src="welcome.png" width="250" height="250" style="border: 2px solid #444; border-radius: 8px;"></iframe>
-  <iframe src="welcome.png" width="250" height="250" style="border: 2px solid #444; border-radius: 8px;"></iframe>
-</div>
-
+    
   </main>
 
 </body>
